# shoe_store

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/2022-06-28-123728_create_products/: down.sql  up.sql
migrations/2022-06-28-211110_create_variants/: down.sql  up.sql
src/: actions.rs  db.rs  lib.rs  main.rs
src/db/: connect.rs  dal.rs  models.rs  schema.rs
tests/: actions.rs  dal.rs
tests/helpers/: mod.rs
