[package]
name = "shoe_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["r2d2", "sqlite"] }
diesel_migrations = { version = "1.4.0" }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
anyhow = "1.0"
actix-web = "4.1"
env_logger = "0.9.0"
log = "0.4.17"
actix-cors = "0.6.1"
actix-session = { version = "0.6.2", features = ["cookie-session"] }